# pico-rtos-sensor-hub

./: .gitignore  LICENSE  Makefile  README.md
docs/: architecture.md  build_host_strategy.md  hardware_matrix.md  host_integration.md  resume_bullets.md  rtos_design.md
firmware/: CMakeLists.txt
firmware/cmake/: pico_sdk_import.cmake
firmware/config/: FreeRTOSConfig.h
firmware/include/: app_runtime.h  hub_state.h  ring_buffer.h  sensor_hub.h  sensor_source.h  telemetry.h
firmware/src/: app_runtime.c  hub_state.c  main.c  ring_buffer.c  sensor_source.c  telemetry.c
host_tools/: __init__.py  config.py  dashboard.py  discovery.py  monitor.py  protocol.py  requirements.txt  simulator.py  storage.py
host_tools/templates/: dashboard.html
scripts/: bootstrap_pi.sh  build_firmware.sh  detect_pico.py  flash_pico.sh  install_firmware_toolchain.sh  run_dashboard.sh  run_monitor.sh  run_simulator_validation.sh  setup_host_tools.sh
tests/: test_discovery.py  test_protocol.py  test_simulator.py  test_storage.py
